Fixed the unordered list in the nav overflowing on small screens.

--- a/ ResponsiveWebDesign/AccessibilityQuiz/styles.css
+++ b/ ResponsiveWebDesign/AccessibilityQuiz/styles.css
@@ -38,6 +38,11 @@ nav {
 nav > ul {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
 }
 
 nav > ul > li {
